# spring2026-assignments

HW1/: README.md  compile.py  hw1.ipynb  pyproject.toml
HW1/src/: kv_cache.py  logit_lens.py  probing.py
HW1/tests/: test_kv_cache.py  test_logit_lens.py  test_probing.py
HW2/: README.md  compile.py  hw2.ipynb  pyproject.toml
HW2/src/: instruction_tuning.py  rlhf.py  sft.py
HW2/tests/: test_instruction_tuning.py  test_rlhf.py  test_sft.py
HW3/: README.md  hw3.ipynb  pyproject.toml
HW3/src/: attn_residuals.py  distributed.py
HW3/tests/: conftest.py  test_attn_res.py  test_distributed.py
