[project]
name = "cmsc25750-hw3"
version = "1.0.0"
description = "CMSC 25750 Homework 3: Frontier Lab Interview Prep"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "pytest>=8.0",
    "ipykernel>=6.0",
]

[tool.uv]
package = false
python-preference = "managed"

[tool.pytest.ini_options]
testpaths = ["tests"]
